@@ -482,6 +482,10 @@ Bug Fixes
 
 41. SOLR-501: Fix admin/analysis.jsp UTF-8 input for some other servlet
     containers such as Tomcat. (Hiroaki Kawai, Lars Kotthoff via yonik)
+    
+42. SOLR-616: SpellChecker accuracy configuration is not applied for FileBasedSpellChecker.
+    Apply it for FileBasedSpellChecker and IndexBasedSpellChecker both.
+    (shalin)
 
 Other Changes
  1. SOLR-135: Moved common classes to org.apache.solr.common and altered the
